--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "config": "^3.3.8",
+    "deso-protocol": "^0.8.2",
     "dotenv": "^16.0.3",
     "mongoose": "^6.7.1",
     "openai": "^3.1.0",
