--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/axios": "^0.14.0",
     "config": "^3.3.8",
     "deso-protocol": "^0.8.2",
     "dotenv": "^16.0.3",
